@@ -15,4 +15,4 @@ if(getRversion() >= "3.1.0")
 setMethod("anyNA", signature(x = "nsparseMatrix"), function(x) FALSE)
 
 
-setMethod("image", "nsparseMatrix", function(x, ...) image(as(x,"dMatrix")))
+setMethod("image", "nsparseMatrix", function(x, ...) image(as(x,"dMatrix"), ...))
